# FlightSearcher

./: .gitignore  Makefile  flight_viewer.py  main.py  pyproject.toml
outputs/: dep_LIS_HND_2026-08-01__arr_HND_LIS_2026-08-10.csv  dep_LIS_HND_2026-08-01__arr_HND_LIS_2026-08-11.csv  dep_LIS_HND_2026-08-01__arr_HND_LIS_2026-08-12.csv  dep_LIS_HND_2026-08-02__arr_HND_LIS_2026-08-11.csv  dep_LIS_HND_2026-08-02__arr_HND_LIS_2026-08-12.csv  dep_LIS_HND_2026-08-02__arr_HND_LIS_2026-08-13.csv  dep_LIS_HND_2026-08-03__arr_HND_LIS_2026-08-12.csv  dep_LIS_HND_2026-08-03__arr_HND_LIS_2026-08-13.csv  dep_LIS_HND_2026-08-03__arr_HND_LIS_2026-08-14.csv  dep_LIS_HND_2026-08-04__arr_HND_LIS_2026-08-13.csv  dep_LIS_HND_2026-08-04__arr_HND_LIS_2026-08-14.csv  dep_LIS_HND_2026-08-04__arr_HND_LIS_2026-08-15.csv  dep_LIS_HND_2026-08-05__arr_HND_LIS_2026-08-14.csv  dep_LIS_HND_2026-08-05__arr_HND_LIS_2026-08-15.csv  dep_LIS_HND_2026-08-05__arr_HND_LIS_2026-08-16.csv  dep_LIS_HND_2026-08-06__arr_HND_LIS_2026-08-15.csv  dep_LIS_HND_2026-08-06__arr_HND_LIS_2026-08-16.csv  dep_LIS_HND_2026-08-06__arr_HND_LIS_2026-08-17.csv  dep_LIS_HND_2026-08-07__arr_HND_LIS_2026-08-16.csv  dep_LIS_HND_2026-08-07__arr_HND_LIS_2026-08-17.csv  dep_LIS_HND_2026-08-07__arr_HND_LIS_2026-08-18.csv  dep_LIS_HND_2026-08-08__arr_HND_LIS_2026-08-17.csv  dep_LIS_HND_2026-08-08__arr_HND_LIS_2026-08-18.csv  dep_LIS_HND_2026-08-08__arr_HND_LIS_2026-08-19.csv  dep_LIS_HND_2026-08-09__arr_HND_LIS_2026-08-18.csv  dep_LIS_HND_2026-08-09__arr_HND_LIS_2026-08-19.csv  dep_LIS_HND_2026-08-09__arr_HND_LIS_2026-08-20.csv  (+348 more)
(+12 files in other folders)
