[project]
name = "flights"
version = "0.1.0"
description = "Track Prices of Flights to Japan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.55.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "selectolax>=0.3.34",
    "sqlalchemy>=2.0.0",
]
