[project]
name = "flights"
version = "0.1.0"
description = "Track Prices of Flights to Japan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.18.2",
    "playwright>=1.55.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.1",
    "selectolax>=0.3.34",
    "sqlalchemy>=2.0.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 150

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.mypy]
packages = "src"
ignore_missing_imports = true
